# glitchtool

./: Cargo.toml  LICENSE  shell.nix
src/: encoding.rs  file_handle.rs  filesystem.rs  main.rs  style.css  time.rs
src/encoding/: bmp.rs  jpeg.rs  mod.rs  png.rs
