[package]
name = "glitchtool"
version = "0.1.0"
authors = [ "ash lea <example@thisismyactual.email>" ]
edition = "2018"

[dependencies]
azul = { git = "https://github.com/ashkitten/azul", branch = "glitchtool" }
env_logger = "0.7"
failure = "0.1"
fuse = { git = "https://github.com/zargony/fuse-rs", branch = "modernize" }
image = "0.22"
libc = "0.2"
log = "0.4"
